[package]
name = "reru"
description = "A simple REST client"
repository = "https://github.com/sinkuu/reru"
version = "0.1.0"
authors = ["sinkuu <sinkuupump@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["json"]
json = ["serde", "serde_json"]

[dependencies]
hyper = "^0.9"
url = "^1.1"
serde = { version = "^0.7", optional = true }
serde_json = { version = "^0.7", optional = true }
